@@ -50,7 +50,10 @@ Bug fixes
   throw NoSuchDirectoryException when all files written so far have been
   written to one directory, but the other still has not yet been created on the
   filesystem.  (Robert Muir)
-  
+
+* LUCENE-3402: term vectors disappeared from the index if optimize() was called
+  following addIndexes(). (Shai Erera)
+     
 New Features
 
 * LUCENE-3290: Added FieldInvertState.numUniqueTerms 
